# Prometheus

./: .gitignore  CONTRIBUTING.md  HARVEST-OVERNIGHT-RUNBOOK.md  PR-DESCRIPTION.md  PROMETHEUS.md  README.md  TODO.md  pyproject.toml
.githooks/: pre-commit
audits/: 20260613T000000Z-ws-auth-phase0.md  20260613T020000Z-coding-api-stop-diff-survey.md  20260613T030000Z-flywheel-first-turn.md  20260613T040000Z-coding-task-restart-survival-survey.md  20260613T050000Z-flywheel-corpus-survey.md  20260613T053000Z-flywheel-corpus-results.md  20260613T060000Z-harvest-breadth-verification.md  20260615T000000Z-dictwrap-lora-phase0.md  20260615T0555Z-dictwrap-lora-phases1-3.md
config/: model_registry.yaml  prometheus.yaml.default
docs/: OBSIDIAN-VIEW.md
packaging/: prometheus.service
scripts/: cleanup_pathological_skills.py  daemon.py  export_training_pairs.py  gen_harvest_corpus.py  gym_run.py  install_obsidian_view.sh  mine_training_pairs.py  record_loop_envelope_fixture.py  run_model_ab_eval.py  run_nightly_evals.py  smoke_pair_capture.py  smoke_test_tool_calling.py  sync_skills.py  transition_histogram.py  validate_deferred_loading.py  vibe_check.py  web_capability_audit.py  xai_oauth_login.py
skills/: agent-driven-development.md  agentic-actions-audit.md  aider.md  algorithmic-art.md  arxiv.md  ascii-art.md  batch.md  canvas-design.md  claude-code.md  codex.md  coding-agent-delegation.md  delegate-to-agent.md  diagram-design.md  dispatching-parallel-agents.md  docker.md  docx.md  download-model-to-gpu.md  find-nearby.md  finishing-development-branch.md  gh-issues.md  gif-creator.md  git-worktrees.md  github-auth.md  github-code-review.md  github-issues.md  github-operations.md  github-pr-workflow.md  github-repo-management.md  gog.md  google-workspace.md  himalaya-email.md  host-healthcheck.md  html-builder.md  html-canvas-preview.md  image-generation.md  internal-comms.md  jupyter-python-repl.md  llm-api.md  local-image-generation.md  obsidian-markdown.md  (+19 more)
templates/: SOUL.md.template
tests/: conftest.py  test_acceptance_real_path.py  test_adapter.py  test_adapter_tiers.py  test_agent_loop_high_risk_swallows.py  test_anatomy.py  test_anatomy_tool_registered.py  test_api_artifacts.py  test_api_chat_send.py  test_api_code.py  test_api_cron.py  test_api_documents.py  test_api_files.py  test_api_files_security.py  test_api_kanban.py  test_api_kanban_security.py  test_api_live_upload.py  test_api_memory_write.py  test_api_model_rest.py  test_api_paperclip_wake.py  test_api_profiles.py  test_api_project_file.py  test_api_provider_keys.py  test_api_session_delete.py  test_api_sessions_durable.py  test_api_sessions_meta.py  test_api_skill_drafts.py  test_api_video_ingest.py  test_backup_vault.py  test_bash_killpg_and_repeat_guard.py  (+156 more)
(+275 files in other folders)
